--- a/madinati/pubspec.yaml
+++ b/madinati/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   google_nav_bar: ^5.0.7
   provider: ^6.1.2
   flutter_svg: ^2.0.17
+  device_preview: ^1.2.0
 
 dev_dependencies:
   flutter_test:
@@ -72,17 +73,14 @@ flutter:
   # "family" key with the font family name, and a "fonts" key with a
   # list giving the asset and other descriptors for the font. For
   # example:
-  # fonts:
-  #   - family: Schyler
-  #     fonts:
-  #       - asset: fonts/Schyler-Regular.ttf
-  #       - asset: fonts/Schyler-Italic.ttf
-  #         style: italic
-  #   - family: Trajan Pro
-  #     fonts:
-  #       - asset: fonts/TrajanPro.ttf
-  #       - asset: fonts/TrajanPro_Bold.ttf
-  #         weight: 700
+  fonts:
+    - family: Geom
+      fonts:
+        - asset: fonts/Geom-Black.ttf
+    - family: Urbanist
+      fonts:
+        - asset: fonts/Urbanist.ttf
+
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/to/font-from-package
