--- a/madinati/pubspec.yaml
+++ b/madinati/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   provider: ^6.1.2
   flutter_svg: ^2.0.17
   device_preview: ^1.2.0
+  pinput: ^5.0.1
 
 dev_dependencies:
   flutter_test:
