--- a/madinati/pubspec.yaml
+++ b/madinati/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   flutter_svg: ^2.0.17
   device_preview: ^1.2.0
   pinput: ^5.0.1
+  url_launcher: ^6.3.1
+  flutter_map: ^8.0.0
 
 dev_dependencies:
   flutter_test:
